# weather-api

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
api/: config.py  dependencies.py  main.py
api/db/: config.py  db.sqlite  tables.py
api/db/dals/: users.py
api/services/mapbox/: config.py  methods.py  types.py
api/services/nws/: config.py  methods.py  types.py  utils.py
api/v1/: router.py  schemas.py
api/v1/routes/: geocode.py  weather.py
api/v1/schemas/: mapbox.py  nws.py
deploy/: start-keycloak.sh
etc/keycloak/: Dockerfile
scripts/: entrypoint.sh  run-keycloak-dev.sh
src/api/db/: config.py  tables.py
src/api/services/nws/: config.py  methods.py
src/api/v1/: router.py
src/api/v1/routes/: weather.py
