[project]
name = "weather-api"
version = "0.1"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "fastapi",
    "httpx",
    "uvicorn[standard]",
    "python-multipart",
    "aiofiles",
    "aiosqlite",
    "sqlalchemy[asyncio]",
    "pyarrow",
]
optional-dependencies.dev = ["ruff"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B006", "C405", "UP034"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false
